Update .env for Online Mongo

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI = mongodb://localhost:27017/CodeNEST
+MONGODB_URI = mongodb+srv://aashishprasad65:AaShIsH65mongodb@codenest.hv5ls.mongodb.net/CodeNEST?retryWrites=true&w=majority&appName=codeNest
 PORT = 5000
